k8s/green-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-backend-deployment
  labels:
    app: green-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
        - image: pj3677/color-app:1.0.0
          imagePullPolicy: Always
          name: green-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: green-app-service
spec:
  type: NodePort
  selector:
    app: green-app
  ports:
    - port: 3000
      targetPort: 3000
