k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: proxy1.dingtom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-app-service
                port:
                  number: 3000
    - host: proxy2.dingtom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: red-app-service
                port:
                  number: 3000
